2024.002:
	- ms_nslc2sid() requires all codes except location to be set to reduce misuse.
	- Fix raw, diagnostic generation of SIDs from miniSEED v2 when full codes are used.
	- Fix handling of data length in miniSEED v3 as 32-bits instead of 16-bits.
	- Increase MAXRECLEN from 131172 (131+ KiB) to 10485760 (10 MiB)
	- Update yyjson to release 0.8.0.

2023.335:
	- Add LMIO_FD type of reading IO via arbitrary file descriptor and hooks for setting.
	- Add mseh_replace() to replace extra headers.
	- Consistently initialize header values to 0, fixing edge cases like header-only records.
	- Update link in documentation of ms_readleapsecondfile() for sources of leap-seconds.list.

2023.206: 3.0.17
	- Add tests for default record length and encoding.
	- Document versioning schema as semantic versioning.
	- Add const qualifiers to packing routines that do not modify the
	passed MS3Record structure.

2023.204: 3.0.16
	- Additional Steim 1 & 2 decoder optimization.
	- Add more const qualifiers to pointer values.  Thanks @damb.

2023.185:
	- Fix logic in `msr3_duplicate()` for certain cases.
	- Add many const qualifiers to pointer values where the library
	interface does not modify the data.  Thanks @damb

2023.180:
	- Add const qualifier to record pointer declarations where the
	library interface does not modify the data.

2023.177:
	- Incorporate ms_gswapX() functions into libmseed.h to promote inlining.
	- Optimize Steim 1 & 2 decoders.
	- Change test for environment variable DECODE_DEBUG to compile-time define
	- Change test for environment variable ENCODE_DEBUG to compile-time define

2023.162: 3.0.15
	- Print sample rate in Hz consistently in msr3_print()
	- Fix writing of SNR values field 9 of Blockette 201 (v2)
	- Read and write microsecond offsets to/from Blockette 500 (v2)
	- Fix addition of Clock Model field 9 of Blocketee 500 (v2)

2023.160: 3.0.14
	- Add FAQ to documentation and update example code to match API changes.